# JobScraper

./: .gitignore  README.md  config.py  data_cleaner.py  models.py  pagina.txt  pyproject.toml  run_scrape.py
scrapers/: base.py  linkedin.py
